crates/apollo_storage/src/serialization/snapshots/apollo_storage__serialization__serializers_test__hints_regression_hint_4088.snap
---
source: crates/apollo_storage/src/serialization/serializers_test.rs
expression: encoded_hint
---
- 0
- 0
- 0
- 0
- 0
- 0
- 15
- 248
- 1
- 42
- 0
- 0
- 9
- 0
- 0
- 4
- 0
- 2
- 137
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 17
- 2
- 144
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 255
- 0
- 254
- 255
- 0
- 255
- 255
